<resources>
    <string name="app_name">Tutorial3</string>
    <string name="action_settings">Settings</string>

    <string name="bill_text_view">Bill</string>
    <string name="bill_edit_text">0.0</string>

    <string name="tip_text_view">Tip</string>
    <string name="tip_edit_text">0.15</string>

    <string name="final_text_view">Final</string>
    <string name="final_bill_edit_text">0.15</string>
    
    <string name="change_tip_text_view">Tip</string>
    
    
    <string name="intro_text_view">Introduction</string>

    <string name="intro_friendly_text_view">Friendly</string>
    <string name="intro_special_text_view">Special</string>
    <string name="intro_openion_text_view">Openion</string>

    <string name="available_text_view">Available</string>
    <string name="available_bad_readio_button">Bad</string>
    <string name="available_ok_radio_button">Ok</string>
    <string name="available_good_radio_button">Good</string>

    <string name="time_waiting_text_view">Time waiting for service</string>
    <string name="start_chonometer_button">Start</string>
    <string name="pause_chonometer_button">Pause</string>
    <string name="restart_chonometer_button">Restart</string>
    
    <string-array name="problem_solving">
        <item>Problem Soving</item>
        <item>Bad</item>
        <item>Ok</item>
        <item>Good</item>
    </string-array>

</resources>
