<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bridgelabz.tutorial3.MainActivity"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_text_view"
        android:id="@+id/billTextView"
        android:layout_marginTop="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billEditText"
        android:ems="5"
        android:text="@string/bill_edit_text"
        android:layout_alignBottom="@+id/billTextView"
        android:layout_toRightOf="@+id/billTextView"
        android:layout_toEndOf="@+id/billTextView"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_text_view"
        android:id="@+id/tipTextView"
        android:layout_alignBottom="@+id/billEditText"
        android:layout_toRightOf="@+id/billEditText"
        android:layout_toEndOf="@+id/billEditText"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipEditText"
        android:ems="4"
        android:layout_alignBottom="@+id/tipTextView"
        android:layout_toRightOf="@+id/tipTextView"
        android:layout_toEndOf="@+id/tipTextView"
        android:text="@string/tip_edit_text"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_text_view"
        android:id="@+id/finalBillTextView"
        android:layout_below="@+id/tipTextView"
        android:layout_alignLeft="@+id/tipTextView"
        android:layout_alignStart="@+id/tipTextView"
        android:layout_marginTop="43dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalBillEditText"
        android:layout_below="@+id/finalBillTextView"
        android:layout_alignLeft="@+id/finalBillTextView"
        android:layout_alignStart="@+id/finalBillTextView"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/final_bill_edit_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Tip"
        android:id="@+id/changeTipTextView"
        android:layout_alignTop="@+id/finalBillTextView"
        android:layout_alignLeft="@+id/billTextView"
        android:layout_alignStart="@+id/billTextView" />

    <SeekBar
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/changeTipSeekBar"
        android:layout_alignBottom="@+id/finalBillEditText"
        android:layout_alignLeft="@+id/changeTipTextView"
        android:layout_alignStart="@+id/changeTipTextView"
        android:layout_alignRight="@+id/billEditText"
        android:layout_alignEnd="@+id/billEditText"
        android:progress="15"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text_view"
        android:id="@+id/textView"
        android:layout_below="@+id/changeTipSeekBar"
        android:layout_alignLeft="@+id/changeTipSeekBar"
        android:layout_alignStart="@+id/changeTipSeekBar"
        android:layout_marginTop="15dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_friendly_text_view"
        android:id="@+id/friendlyCheckBox"
        android:checked="false"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_special_text_view"
        android:id="@+id/specialCheckBox"
        android:checked="false"
        android:layout_above="@+id/textView2"
        android:layout_toLeftOf="@+id/finalBillEditText"
        android:layout_toStartOf="@+id/finalBillEditText" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_openion_text_view"
        android:id="@+id/openionCheckBox"
        android:checked="false"
        android:layout_alignTop="@+id/specialCheckBox"
        android:layout_alignRight="@+id/tipEditText"
        android:layout_alignEnd="@+id/tipEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_text_view"
        android:id="@+id/textView2"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/friendlyCheckBox"
        android:layout_marginTop="15dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/availablerRadioGroup"
        android:orientation="horizontal"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/friendlyCheckBox"
        android:layout_alignStart="@+id/friendlyCheckBox">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_bad_readio_button"
        android:id="@+id/availableBadRadio"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_ok_radio_button"
        android:id="@+id/availableOkRadio"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_good_radio_button"
        android:id="@+id/availableGoodRadio"
        android:checked="false" />
    </RadioGroup>


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/problemSpinner"
        android:entries="@array/problem_solving"
        android:layout_below="@+id/availablerRadioGroup"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_waiting_text_view"
        android:id="@+id/timeWaitingTextView"
        android:layout_below="@+id/problemSpinner"
        android:layout_alignLeft="@+id/problemSpinner"
        android:layout_alignStart="@+id/problemSpinner"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_chonometer_button"
        android:id="@+id/startChoronometerButton"
        android:layout_below="@+id/timeWaitingTextView"
        android:layout_alignLeft="@+id/timeWaitingTextView"
        android:layout_alignStart="@+id/timeWaitingTextView"
        android:layout_marginTop="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_chonometer_button"
        android:id="@+id/pauseChoronometerButton"
        android:layout_alignTop="@+id/startChoronometerButton"
        android:layout_toRightOf="@+id/friendlyCheckBox"
        android:layout_toEndOf="@+id/friendlyCheckBox" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart_chonometer_button"
        android:id="@+id/restartChoronometerButton"
        android:layout_alignTop="@+id/pauseChoronometerButton"
        android:layout_alignLeft="@+id/openionCheckBox"
        android:layout_alignStart="@+id/openionCheckBox" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeWaitingChronometer"
        android:layout_above="@+id/startChoronometerButton"
        android:layout_alignRight="@+id/finalBillTextView"
        android:layout_alignEnd="@+id/finalBillTextView" />

</RelativeLayout>
